fix some textures